<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#2FADEF"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waiting_number"
            android:textColor="#FFFFFF"
            android:textSize="100sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:layout_marginTop="-8dp"
            android:id="@+id/waiting_person"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estimate_time"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/minutes"
        android:textColor="#7ED321"
        android:textSize="40sp"
        android:gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:id="@+id/book_now"
            android:textColor="@android:color/white"
            android:text="@string/queue_now"
            android:textSize="12sp"
            android:background="@drawable/rounded_button_color_left"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:id="@+id/book_now_optimize"
            android:textColor="@color/color_blue"
            android:text="@string/queue_best"
            android:textSize="12sp"
            android:background="@drawable/rounded_button_shape_right"/>

    </LinearLayout>

    <ViewAnimator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/va_booking">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="center"
                android:text="@string/queue_now_text"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/make_reservation"
                android:text="@string/make_reservation"
                android:textColor="@android:color/white"
                android:onClick="onBookNowClick"
                android:background="#7ED321"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="center"
                android:text="@string/queue_opti_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="5 minut"
                        android:textColor="@color/color_blue"
                        android:background="@drawable/rounded_button_shape"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:onClick="onMinuteClick"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="15 minut"
                        android:textColor="@color/color_blue"
                        android:background="@drawable/rounded_button_shape"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp"
                        android:onClick="onMinuteClick"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="10 minut"
                        android:textColor="@color/color_blue"
                        android:background="@drawable/rounded_button_shape"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:onClick="onMinuteClick"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="20 minut"
                        android:textColor="@color/color_blue"
                        android:background="@drawable/rounded_button_shape"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:onClick="onMinuteClick"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ViewAnimator>
</LinearLayout>
